<resources>
    <string name="app_name">Homework 1</string>
    <string name="my_name">Mudit Vats</string>
    <string name="my_class">CIS 651</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 40</string>
    <string name="button_5">Button 100000</string>
    <string name="button_6">Save</string>
    <string name="button_7">Submit</string>
    <string name="button_8">Cancel</string>
</resources>
