<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/task1Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1">
    </Button>
    <Button
        android:id="@+id/task1Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:layout_toRightOf="@id/task1Button1">
    </Button>
    <Button
        android:id="@+id/task1Button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:layout_below="@id/task1Button1">
    </Button>
    <Button
        android:id="@+id/task1Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:layout_below="@id/task1Button3">
    </Button>
    <Button
        android:id="@+id/task1Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:layout_below="@id/task1Button3"
        android:layout_toRightOf="@id/task1Button4">
    </Button>
    <Button
        android:id="@+id/task1Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:layout_below="@id/task1Button4">
    </Button>
    <Button
        android:id="@+id/task1Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7"
        android:layout_below="@id/task1Button4"
        android:layout_toRightOf="@id/task1Button6">
    </Button>
    <Button
        android:id="@+id/task1Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8"
        android:layout_below="@id/task1Button4"
        android:layout_toRightOf="@id/task1Button7">
    </Button>
</RelativeLayout>