<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/task0button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text= "@string/button_1"
                android:onClick="onTask0ButtonClicked">
            </Button>
            <Button
                android:id="@+id/task0button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_2"
                android:onClick="onTask0ButtonClicked">
            </Button>
        </LinearLayout>
        <Button
            android:id="@+id/task0button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:onClick="onTask0ButtonClicked">
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/task0button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_4"
                android:onClick="onTask0ButtonClicked">
            </Button>
            <Button
                android:id="@+id/task0button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_5"
                android:onClick="onTask0ButtonClicked">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/task0button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_6"
                android:onClick="onTask0ButtonClicked">
            </Button>
            <Button
                android:id="@+id/task0button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_7"
                android:onClick="onTask0ButtonClicked">
            </Button>
            <Button
                android:id="@+id/task0button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_8"
                android:onClick="onTask0ButtonClicked">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>